--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,8 @@ h1 > span {
     box-shadow: 5px 5px 0 0 rgba(0,0,0,0.75);
     color: white;
     cursor: pointer;
+    transform: scale(1);
+    transition: transform 250ms;
     
 }
 .profile:hover .pic{
