--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ h1 > span {
     color: white;
     cursor: pointer;
     transform: scale(1);
-    transition: transform 500ms;
+    transition: all 500ms;
     
 }
 .profile:hover .pic{
